# cc23_example

./: CMakeLists.txt  README.md  arm-none-eabi.cmake  main.c  ti_drivers_config.c
